# Monte-Carlo-Ray-Tracing

./: .gitignore  CMakeLists.txt  README.md
data/: readme.txt  scene02.mtl
res/: 1.ppm  2.ppm  3.ppm
scenes/Scene02/: cup.mtl
src/: #kd_tree.h#  .#kd_tree.h  aabb.cpp  aabb.h  kd_tree.cpp  kd_tree.h  main.cc  model.cpp  model.h  radiance.cpp  radiance.h  ray.cpp  ray.h
src/test/: test_aabb.cc  test_kdtree.cc  test_model.cc  test_radiance.cc  test_ray.cc
test/: cam1.txt  cam1_test.txt  cam2.txt  cam3.txt  cam_Veach.txt  cam_Veach_test.txt  cam_cup.txt  cam_cup_test.txt  cam_room.txt  cam_room_test.txt  comp2.txt  cup.txt  doc.txt  image.ppm
